<resources>
    <string name="app_name">tdiary</string>
    <string name="default_notification_channel_id">yongbyung_default_channel</string>
    <string name="default_notification_channel_name">yongbyung</string>
    <string name="select_category">카테고리를 선택해주세요</string>
    <string name="start">시작하기</string>
    <string name="input_title">제목을 입력해주세요</string>
    <string name="input_content">내용을 입력해주세요</string>
    <string name="input_location">(선택) 장소를 입력해주세요</string>
    <string name="write_post">모집 글쓰기</string>
    <string name="content">내용</string>
    <string name="title">제목</string>
    <string name="location">위치</string>
    <string name="region">지역</string>
    <string name="date">날짜</string>
    <string name="category">카테고리</string>
    <string name="star">*</string>
    <string name="confirm">확인</string>
    <string name="careful_notice">유의사항</string>
    <string name="terms_of_service"><u>개인정보처리방침</u></string>
    <string name="cancel">취소</string>
    <string name="do_continue">계속하기</string>
    <string name="not_secure_certification">이 사이트의 보안 인증서는 신뢰하는 보안 인증서가 아닙니다. 계속하시겠습니까?</string>
    <string name="essential_agreement">필수 약관 전체동의 (필수)</string>
    <string name="fourteen_agreement">동네용병 서비스는 만 14세 이상만 이용 가능합니다.</string>
    <string name="all_agree">전체 동의</string>
    <string name="need">가 필요해요</string>
    <string name="agreement">약관동의</string>
    <string name="login">로그인</string>
    <string name="message_box">쪽지함</string>
    <string name="sign_out">회원탈퇴</string>
    <string name="logout">로그아웃</string>
    <string name="etc">기타</string>
    <string name="my_post">내가 쓴 글</string>
    <string name="my_activity">내 활동</string>
    <string name="edit">수정</string>
    <string name="recruiting">모집중</string>
    <string name="finish_recruit">모집마감</string>
    <string name="send_message">쪽지하기</string>
    <string name="delete_post">게시글 삭제</string>
    <string name="report_post">게시글 신고하기</string>
    <string name="delete_check">정말 삭제하시겠습니까?</string>
    <string name="delete">삭제</string>
</resources>