<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="com.hardy.yongbyung.components.YongByungBoxButton" />

        <variable
            name="viewModel"
            type="com.hardy.yongbyung.dialog.ReportViewModel" />
    </data>

    <FrameLayout
        android:id="@+id/root_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/bg_white_rounded_8dp"
            android:paddingBottom="16dp">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guide_start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="16dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guide_end"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_end="16dp" />

            <com.hardy.yongbyung.components.YongByungText
                android:id="@+id/yongByungText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/report_post"
                android:textColor="@color/G600"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:typo="button" />

            <com.hardy.yongbyung.components.YongByungTextArea
                android:id="@+id/title_text_area"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:afterTextChanged="@{(title)->viewModel.setTitle(title)}"
                android:hint="@string/title"
                app:layout_constraintEnd_toStartOf="@+id/guide_end"
                app:layout_constraintStart_toStartOf="@+id/guide_start"
                app:layout_constraintTop_toBottomOf="@+id/yongByungText" />

            <com.hardy.yongbyung.components.YongByungTextArea
                android:id="@+id/content_text_area"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:afterTextChanged="@{(content)->viewModel.setContent(content)}"
                android:hint="@string/content"
                android:lines="3"
                app:layout_constraintEnd_toStartOf="@+id/guide_end"
                app:layout_constraintStart_toStartOf="@+id/guide_start"
                app:layout_constraintTop_toBottomOf="@+id/title_text_area" />

            <com.hardy.yongbyung.components.YongByungBoxButton
                android:id="@+id/report_button"
                isLoading="@{viewModel.reportLoading}"
                loadingColor="@{@color/P500}"
                type="@{YongByungBoxButton.LINE}"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@{@string/report_post}"
                app:layout_constraintEnd_toStartOf="@+id/guide_end"
                app:layout_constraintStart_toStartOf="@+id/guide_start"
                app:layout_constraintTop_toBottomOf="@+id/content_text_area" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </FrameLayout>
</layout>
