<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.hardy.yongbyung.ui.login.LoginViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/root_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guide_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="16dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guide_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="16dp" />

        <com.hardy.yongbyung.components.YongByungText
            android:id="@+id/app_name_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:text="@string/app_name"
            android:textColor="@color/P500"
            app:layout_constraintStart_toEndOf="@id/guide_start"
            app:layout_constraintTop_toTopOf="parent"
            app:typo="h2" />

        <com.hardy.yongbyung.components.YongByungText
            android:id="@+id/login_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textColor="@color/P500"
            app:layout_constraintStart_toEndOf="@id/guide_start"
            app:layout_constraintTop_toBottomOf="@id/app_name_text"
            app:typo="h2" />

        <com.hardy.yongbyung.components.YongByungText
            android:id="@+id/need_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/need"
            android:textColor="@color/G600"
            app:layout_constraintBottom_toBottomOf="@+id/login_text"
            app:layout_constraintStart_toEndOf="@id/login_text"
            app:layout_constraintTop_toTopOf="@+id/login_text"
            app:typo="h2" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:adjustViewBounds="true"
            android:src="@drawable/image_login"
            app:layout_constraintBottom_toTopOf="@+id/google_login_button"
            app:layout_constraintEnd_toStartOf="@+id/guide_end"
            app:layout_constraintStart_toStartOf="@+id/guide_start"
            app:layout_constraintTop_toBottomOf="@+id/login_text" />

        <FrameLayout
            android:id="@+id/google_login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="48dp"
            android:background="@drawable/oval_white"
            android:elevation="8dp"
            android:padding="12dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guide_end"
            app:layout_constraintStart_toStartOf="@+id/guide_start">

            <ImageView
                android:id="@+id/imageView3"
                visibleOrGone="@{!viewModel.loginLoading}"
                android:layout_width="24dp"
                android:layout_height="24dp"
                app:srcCompat="@drawable/googleg_standard_color_18"
                tools:layout_editor_absoluteX="175dp"
                tools:layout_editor_absoluteY="547dp" />

            <ProgressBar
                visibleOrGone="@{viewModel.loginLoading}"
                android:layout_width="24dp"
                android:layout_height="24dp" />
        </FrameLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
